<resources>
    <!--Activity-->
    <string name="app_name">Twitch Streamer Tools</string>
    <string name="accounts_action_label">Accounts</string>
    <string name="message_action_label">Message</string>
    <string name="chat_action_label">Chat</string>

    <!--List view-->
    <string name="empty_list_overlay">Your social media list is empty.\nTouch me to get started  ( ͡° ͜ʖ ͡°)</string>
    <string name="add_item_label">Link account</string>

    <!--Add account view-->
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="connect">Connect account</string>

    <!--Select account type view-->
    <string name="sign_in_twitter">Link Twitter account</string>
    <string name="sign_in_facebook">Link Facebook account</string>
    <string name="sign_in_twitch">Link Twitch account</string>

    <!--Message view-->
    <string name="send_message_label">Send message</string>
    <string name="attach_file_label">Attach file</string>

    <!--Detail view-->
    <string name="no_data_loaded_overlay">Couldn\'t load your account ( ͡° ʖ̯ ͡°)</string>

    <!--Dialogs-->
    <string name="dialog_confirm_label">Confirm</string>
    <string name="dialog_cancel_label">Cancel</string>
    <string name="remove_item_dialog_title">Remove account?</string>
    <string name="remove_item_dialog_message">This will permanently remove selected account from this device.</string>
    <string name="send_item_dialog_title">Send message?</string>
    <string name="send_item_dialog_message">After sending message, you won\'t be able to change it.</string>

    <!--Placeholders for testing-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

</resources>
